Fixed layout issues

--- a/ToDo/Views/Projects/Index.cshtml.css
+++ b/ToDo/Views/Projects/Index.cshtml.css
@@ -1,5 +1,5 @@
 ﻿.offset{
-    width:250px;
+    margin-left:250px;
 }
 
 .sidebar {
@@ -58,18 +58,26 @@
 .client-area {
     margin: 0;
     font-family: Arial, sans-serif;
-    display: flex;
-    flex-direction: row;
     width: auto;
     overflow: hidden;
     padding: 2em;
     background: #f4f4f9;
-    height:100%;
+    height: 100%;
+    display:flex;
+    flex-direction:row;
 }
 
 .divider {
     border-left: 1.5px solid rgba(10, 10,10);
     margin:0;
+}
+
+.main-part {
+    width: 100%;
+    overflow: hidden;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
 
 .container {
